fix: slider in service overflow issue

--- a/assets/scss/components/_service-section.scss
+++ b/assets/scss/components/_service-section.scss
@@ -59,8 +59,8 @@
                 }
             }
         }
-        .slick-list {
-            overflow: visible;
+        .slick-arrow::before {
+            color: $primary;
         }
         .slick-dots {
             display: flex;
